separated carousel component into new less file. And fixed minor spacing issue on services page.

--- a/css/index.css
+++ b/css/index.css
@@ -191,6 +191,61 @@ img.mobile {
     display: none;
   }
 }
+.carousel {
+  position: relative;
+}
+.carousel .left-button,
+.carousel .right-button {
+  position: absolute;
+  cursor: pointer;
+  color: white;
+  font-size: 20px;
+  top: 50%;
+  background-color: rgba(0, 0, 0, 0.6);
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  transform: translate(0, -50%);
+  box-shadow: 0px 0px 5px white;
+  z-index: 1;
+}
+.carousel .left-button {
+  left: 10px;
+}
+.carousel .right-button {
+  right: 10px;
+}
+.carousel img {
+  object-fit: cover;
+  width: 100%;
+  height: 500px;
+}
+.carousel .carousel-item {
+  position: relative;
+  height: 500px;
+  overflow: hidden;
+  display: none;
+}
+.carousel .carousel-item:hover address {
+  bottom: 0;
+}
+.carousel .carousel-item address {
+  position: absolute;
+  transition: all 0.2s ease-in-out;
+  bottom: -122px;
+  background-color: rgba(0, 0, 0, 0.6);
+  color: white;
+  padding: 20px;
+  width: 100%;
+  font-size: 14px;
+}
+.carousel .carousel-item address h4 {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
 header {
   position: fixed;
   top: 0;
@@ -483,7 +538,7 @@ footer .copyright {
   }
 }
 .tabs-item {
-  padding: 60px 0;
+  padding: 60px 0 0;
   display: none;
 }
 @media (max-width: 500px) {
@@ -630,60 +685,6 @@ footer .copyright {
     padding-bottom: 40px;
   }
 }
-.carousel {
-  position: relative;
-}
-.carousel .left-button,
-.carousel .right-button {
-  position: absolute;
-  color: white;
-  font-size: 20px;
-  top: 50%;
-  background-color: rgba(0, 0, 0, 0.6);
-  width: 40px;
-  height: 40px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50%;
-  transform: translate(0, -50%);
-  box-shadow: 0px 0px 5px white;
-  z-index: 1;
-}
-.carousel .left-button {
-  left: 10px;
-}
-.carousel .right-button {
-  right: 10px;
-}
-.carousel img {
-  object-fit: cover;
-  width: 100%;
-  height: 500px;
-}
-.carousel .carousel-item {
-  position: relative;
-  height: 500px;
-  overflow: hidden;
-  display: none;
-}
-.carousel .carousel-item:hover address {
-  bottom: 0;
-}
-.carousel .carousel-item address {
-  position: absolute;
-  transition: all 0.2s ease-in-out;
-  bottom: -122px;
-  background-color: rgba(0, 0, 0, 0.6);
-  color: white;
-  padding: 20px;
-  width: 100%;
-  font-size: 14px;
-}
-.carousel .carousel-item address h4 {
-  font-size: 18px;
-  margin-bottom: 10px;
-}
 .gallery {
   text-align: center;
 }
@@ -703,6 +704,7 @@ footer .copyright {
   color: white;
   width: 100%;
   text-shadow: 1px 1px 8px black;
+  font-size: 24px;
 }
 footer {
   margin-top: 80px;
