--- a/less/contact.less
+++ b/less/contact.less
@@ -95,65 +95,4 @@
   //   }
 }
 
-// ================= carousel for where we work
-.carousel {
-  position: relative;
-
-  .left-button,
-  .right-button {
-    position: absolute;
-    color: white;
-    font-size: 20px;
-    top: 50%;
-    background-color: rgba(0, 0, 0, 0.6);
-    width: 40px;
-    height: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    transform: translate(0, -50%);
-    box-shadow: 0px 0px 5px white;
-    z-index: 1;
-  }
-  .left-button {
-    left: 10px;
-  }
-  .right-button {
-    right: 10px;
-  }
-
-  img {
-    object-fit: cover;
-    width: 100%;
-    height: 500px;
-  }
-
-  .carousel-item {
-    position: relative;
-    height: 500px;
-    overflow: hidden;
-    display: none;
-
-    &:hover {
-      address {
-        bottom: 0;
-      }
-    }
-
-    address {
-      position: absolute;
-      transition: all 0.2s ease-in-out;
-      bottom: -122px;
-      background-color: rgba(0, 0, 0, 0.6);
-      color: white;
-      padding: 20px;
-      width: 100%;
-      font-size: 14px;
-      h4 {
-        font-size: 18px;
-        margin-bottom: 10px;
-      }
-    }
-  }
-}
+// ================= look at carousel.less file for where we work
