--- a/less/projects.less
+++ b/less/projects.less
@@ -16,6 +16,7 @@
     color: white;
     width: 100%;
     text-shadow: 1px 1px 8px black;
+    font-size: 24px;
   }
 }
 
