--- a/less/services.less
+++ b/less/services.less
@@ -34,7 +34,7 @@
 }
 
 .tabs-item {
-  padding: 60px 0;
+  padding: 60px 0 0;
   display: none;
   @media @mobile {
     padding-top: 40px;
